<resources>
    <string name="app_name">MyMediaCare</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_register">Register</string>
    <string name="Add_New">Add New</string>
    <string name="edit">Edit Person</string>
    <string name="delete">Delete Person</string>
    <string name="save">Save Person</string>

    <string name="name">Name</string>
    <string name="gender">Gender</string>
    <string name="age">Age</string>
    <string name="register">Register</string>

    <string name="deletePerson">Confirm person deletion.</string>
    <string name="yes">Confirm</string>
    <string name="no">Cancel</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_contact">contactActivity</string>
    <string name="title_activity_account">accountActivity</string>
    <string name="title_activity_custom">customActivity</string>
    <string name="title_activity_about">aboutActivity</string>
    <string name="title_activity_help">helpActivity</string>
    <string name="title_activity_view_results">viewResults</string>
</resources>
